[gd_scene load_steps=2 format=3 uid="uid://c1gbncg3108a8"]

[ext_resource type="Script" path="res://Main Menu/main_menu.gd" id="1_y7fkx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y7fkx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(4.79213e-12, 80)
layout_mode = 2
theme_override_constants/v_separation = 15

[node name="StartButton" type="Button" parent="MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Start Game"

[node name="TutorialButton" type="Button" parent="MarginContainer/VFlowContainer"]
layout_mode = 2
text = "Tutorial"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(4.79213e-12, 125)
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer2/VFlowContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer2/VFlowContainer/HFlowContainer"]
layout_mode = 2
text = "Music  Volume"

[node name="Music" type="HSlider" parent="MarginContainer2/VFlowContainer"]
custom_minimum_size = Vector2(600, 4.79213e-12)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="HSeparator" type="HSeparator" parent="MarginContainer2/VFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HFlowContainer3" type="HFlowContainer" parent="MarginContainer2/VFlowContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer2/VFlowContainer/HFlowContainer3"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="SoundEffects" type="HSlider" parent="MarginContainer2/VFlowContainer"]
custom_minimum_size = Vector2(600, 4.79213e-12)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[connection signal="pressed" from="MarginContainer/VFlowContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="value_changed" from="MarginContainer2/VFlowContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer2/VFlowContainer/SoundEffects" to="." method="_on_sound_effects_value_changed"]
